--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "frontend",
+  "name": "asme-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^3.10.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@emailjs/browser": "^3.12.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
-    "emailjs": "^4.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "emailjs": "^4.0.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +46,6 @@
     "autoprefixer": "^10.4.13",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.17"
   }
 }
